Start family handler

--- a/TODO.txt
+++ b/TODO.txt
@@ -1,5 +1,6 @@
 Heirarchical ResourceStorage
 Top layer distributes incoming resources
 Lower layer keeps track of count per tower (and implements caps (for pastures and the like))
+Done
 
 Turn Manager
